--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,37 +4,85 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TODO</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="/styles/main.css">
 </head>
 <body>
-    <h1>Todo List App</h1>
-    <form action="/" method="post">
-        <button type="submit" name="category" value="personal">Personal</button>
-    </form>
-    <form action="/work" method="post">
-        <button type="submit" name="category" value="work">Work</button>
-    </form>
-    <form method="post">
-        <input type="text" name="add">
-        <button type="submit">Add</button>
-    </form>
-    <table>
-        <% if(locals.category && category === 'personal' && items.length > 0) { %>
-            <% items.forEach(item => { %>
-                <tr>
-                    <td> <%= item %> </td>
-                </tr>
-            <% }); %>
-        <% } else if (locals.category && category === 'work' && items.length > 0) { %>
-            <% items.forEach(item => { %>
-                <tr>
-                    <td> <%= item %> </td>
-                </tr>
-            <% }); %>
-        <% } else { %>
-            <tr>
-                <td>No items added yet.</td>
-            </tr>
-        <% } %>
-    </table>
+    <div class="app">
+        <div class="container">
+            <div class="row">
+              <div class="col-sm">
+                <h1>Todo List App</h1>
+              </div>
+            </div>
+            <div class="row">
+                <div class="col-sm">
+                    <form action="/" method="post">
+                        <button class="btn btn-primary" type="submit" name="category" value="personal">Personal</button>
+                    </form>
+                </div>
+                <div class="col-sm">
+                    <form action="/work" method="post">
+                        <button class="btn btn-success"type="submit" name="category" value="work">Work</button>
+                    </form>
+                </div>
+            </div>
+            <form method="post">
+                <div class="row">
+                    <div class="col-6">
+                        <input type="text" name="add">
+                    </div>
+                    <div class="col-6">
+                        <button class="btn btn-info" type="submit">Add</button>
+                    </div>
+                </div>
+            </form>
+            <div class="row">
+                <div class="col-12">
+                    <table>
+                        <% if (locals.category && category === 'personal' && items.length > 0) { %>
+                            <% items.forEach((item, index) => { %>
+                                <tr>
+                                    <td class="<%= item.done ? 'done' : '' %>"><%= item.text %></td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <form action="/mark-done" method="post">
+                                            <input type="hidden" name="taskIndex" value="<%= index %>">
+                                            <input type="hidden" name="category" value="personal">
+                                            <button class="did">Done</button>
+                                        </form>
+                                    </td>
+                                </tr>
+                            <% }); %>
+                        <% } else if (locals.category && category === 'work' && items.length > 0) { %>
+                            <% items.forEach((item, index) => { %>
+                                <tr>
+                                    <td class="<%= item.done ? 'done' : '' %>"><%= item.text %></td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <form action="/mark-done" method="post">
+                                            <input type="hidden" name="taskIndex" value="<%= index %>">
+                                            <input type="hidden" name="category" value="work">
+                                            <button class="did">Done</button>
+                                        </form>
+                                    </td>
+                                </tr>
+                            <% }); %>
+                        <% } else { %>
+                            <tr>
+                                <td>No items added yet.</td>
+                            </tr>
+                        <% } %>
+                    </table>
+                </div>
+            </div>
+
+        </div>
+        
+
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
